# chipgate

./: .gitignore  BENCHMARK_EVIDENCE.md  LICENSE  LIMITATIONS.md  README.md  demo_passport.json  demo_request.json  demo_response.json  designguard_lite.py  mutation_evidence.json  public_adapter.py  publish_to_github.ps1  pyproject.toml  requirements.txt
.github/workflows/: chipgate-ci.yml  ci.yml  nightly-toolchain.yml  toolchain-ci.yml
benchmarks/designpassport_v0/artifacts/: demo_chemistry.txt  demo_document.md  demo_physics.txt  demo_private_leak.v  demo_rtl_safe.v  demo_rtl_unsafe.v  demo_unsafe_claim.md
benchmarks/designpassport_v0/fixtures/: adapter_input_example.json  benchmark_info.json
benchmarks/formalgate_v0/designs/: failsafe_escape_formal.v  missing_kill_switch_formal.v  safe_dtl_gate_formal.v  unsafe_direct_actuator_formal.v
benchmarks/formalgate_v0/fixtures/: fail_missing_solver.txt  fail_property.txt  pass_clean.txt
benchmarks/formalgate_v0/properties/: default_properties.sv  failsafe_escape_formal.sv  (+7 more)
benchmarks/openlanephysical_v0/: physical_evidence.json
benchmarks/synthbench_v0/: candidates.json
benchmarks/tinytapeoutprep_v0/: evidence_pack.json  info.yaml  pinout.json  submission_checklist.md
chipgate/: __init__.py  __main__.py  area_proxy.py  bench.py  bench_cases.py  bench_report.py  bitstream_readiness.py  board_profiles.py  ci_artifacts.py  ci_matrix.py  ci_report.py  ci_toolchain.py  cost_model.py  design_passport.py  design_score.py  drc_lvs_parser.py  dtl_gate.py  evidence.py  faults.py  formal.py  formal_artifacts.py  formal_flow.py  formal_parser.py  formal_properties.py  formal_report.py  formal_runner.py  formalate.py  formalgate_bench.py  formalgate_report.py  fpga_board.py  fpga_flow.py  fpga_report.py  fpgabench.py  gds_artifacts.py  lint.py  longevity.py  mutation_artifacts.py  mutation_catalog.py  mutation_report.py  mutation_runner.py  (+47 more)
chipgate/adapters/: __init__.py  base.py  external_dtl_adapter.example.py  jsonl_adapter.py  synthetic_adapter.py
docs/: ADAPTERS.md  BOARD_PROFILES.md  CHIPBENCH.md  CI_LIMITATIONS.md  DESIGN_PASSPORT_LIMITATIONS.md  DESIGN_PASSPORT_SCHEMA.md  DTL_CONNECTED_TESTING.md  DTL_VERIFIED_DESIGN_PASSPORT.md  EXAMPLES.md  FORMALGATE_LITE.md  FORMAL_LIMITATIONS.md  FORMAL_PROPERTIES.md  FPGABOARD_BENCH.md  FPGA_LIMITATIONS.md  GDS_ARTIFACTS.md  HOLDOUT.md  JARVI3_EXTENSION_BOUNDARY.md  LIMITATIONS.md  METRICS.md  MUTATIONBENCH.md  MUTATION_CATALOG.md  MUTATION_LIMITATIONS.md  OPENLANE_PHYSICAL_BENCH.md  OPEN_SILICON_LIMITATIONS.md  PHYSICAL_FLOW_LIMITATIONS.md  PPA_METRICS.md  REAL_TOOLCHAIN_CI.md  SCHEMA.md  SILICON_LIMITATIONS.md  SILICON_READINESS.md  SYNTHBENCH.md  TINYTAPEOUT_PREP.md  TINY_DTL_GATE.md  TOOLCHAIN.md
download/: chipbench_report.html  fpga_toolchain_status.json  fpgabench_demo.json  fpgabench_report.html  openlane_physical_bench.json  openlane_physical_report.html  openlane_physical_report.json
download/results/: chipbench_v030_3mode_comparison.html  chipbench_v030_3mode_comparison.json  chipbench_v030_chipgate_only.html  chipbench_v030_chipgate_only.json  chipbench_v030_comparison.html  chipbench_v030_comparison.json  chipbench_v030_external_dtl.html  chipbench_v030_external_dtl.json  chipbench_v030_ungated_baseline.json  dtl_proposals.jsonl  longevity_demo.html  longevity_demo.json  longevity_full.html  siliconbench_demo.json  siliconbench_report.html  synthbench_report.html  synthbench_v10.json
examples/: bad_alu.v  demo_proposals.jsonl  dtl_gate_fsm.v  good_counter.v  safe_dtl_gate.evidence.json  unsafe_actuator.v
jarvi3_designguard_lite/: __init__.py  __main__.py
scripts/: generate_dtl_proposals.py  generate_synthbench_candidates.py  run_fpgabench_demo.py
tests/: __init__.py  test_bench.py  test_bench_v3.py  test_chipgate.py  test_designguard_lite.py  test_formalgate.py  test_fpgabench.py  test_mutationbench.py  test_openlane_physical.py  test_passport.py  test_real_toolchain_ci.py  test_rtl_check.py  test_siliconbench.py  test_synthbench.py  test_tinytapeout.py  test_tinytapeout_prep.py
(+164 files in other folders)
