[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvi3-chip-designguard-lite"
version = "0.1.0"
description = "Public-safe JARVI3 Chip DesignGuard Lite schema and demo package."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "JARVI3 / kyal102" }]
keywords = ["chipgate", "rtl", "verilog", "designguard", "jarvi3", "hardware-verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kyal102/chipgate"
Repository = "https://github.com/kyal102/chipgate"
Issues = "https://github.com/kyal102/chipgate/issues"

[project.scripts]
jarvi3-designguard-lite = "jarvi3_designguard_lite.__main__:main"

[tool.setuptools]
py-modules = ["designguard_lite", "public_adapter"]
packages = ["jarvi3_designguard_lite"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
