[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chipgate-lite"
version = "0.2.0"
description = "Deterministic structural sanity checker for Verilog RTL: catches undriven outputs, multi-driven signals, latch-inference risks, and blocking/nonblocking misuse. Pure stdlib."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "JARVI3 / kyal102" }]
keywords = ["chipgate", "rtl", "verilog", "designguard", "jarvi3", "hardware-verification"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kyal102/chipgate"
Repository = "https://github.com/kyal102/chipgate"
Issues = "https://github.com/kyal102/chipgate/issues"

[project.scripts]
chipgate = "chipgate.__main__:main"
jarvi3-designguard-lite = "jarvi3_designguard_lite.__main__:main"

[tool.setuptools]
py-modules = ["designguard_lite", "public_adapter"]
packages = ["chipgate", "jarvi3_designguard_lite"]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
