[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chipgate-lite"
version = "0.8.0"
description = "ChipGate catches unsafe RTL before it becomes silicon: safety scanning, lint/formal readiness, mutation stress-testing, and verified design passports for Verilog/SystemVerilog."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kyal McAuliffe / EcoKure" }]
keywords = ["verilog", "rtl", "lint", "eda", "hardware-verification", "safety", "formal", "mutation-testing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
  "pyyaml>=6.0",
  "jsonschema>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kyal102/chipgate"
Repository = "https://github.com/kyal102/chipgate"
Issues = "https://github.com/kyal102/chipgate/issues"

[project.scripts]
chipgate = "chipgate.__main__:main"

[tool.setuptools]
packages = { find = { include = ["chipgate*"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
